#
# bazel_pylint: Copyright 2022 Nuna Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load("@rules_python//python:defs.bzl", "py_binary")
load("@bazel_pylint_pip_deps//:requirements.bzl", "requirement")

exports_files(
    ["pylintrc"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "run_pylint",
    srcs = ["run_pylint.py"],
    python_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("pylint"),
    ],
    data = [
        requirement("pylint"),
    ],
)

py_binary(
    name = "run_black",
    srcs = ["run_black.py"],
    python_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("black"),
    ],
)
