#
# bazel_pylint: Copyright 2022 Nuna Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load(
    "@bazel_pylint//:pyrules.bzl",
    "py_lint_binary",
    "py_lint_library",
    "py_lint_test",
)

py_lint_library(
    name = "py_library",
    srcs = ["py_library.py"],
    srcs_version = "PY3",
)

py_lint_library(
    name = "py_library2",
    srcs = ["py_library2.py"],
    # black will cause error if 2 spaces are used in pylintrc,
    # only used when pylint settings are set to 4 spaces
    black_check = True,
    rules = ":pylintrc_example",
    srcs_version = "PY3",
)

py_lint_binary(
    name = "py_binary",
    srcs = ["py_binary.py"],
    srcs_version = "PY3",
    deps = [":py_library"],
)

py_lint_test(
    name = "py_test",
    srcs = ["py_test.py"],
    srcs_version = "PY3",
    deps = [":py_library"],
)
